@@ -1,5 +1,9 @@
 Revision history for Perl extension Statistics::R.
 
+0.x
+    - Skip tests that hang on Windows (thanks Clifford Sobchuk and Gisbert W.
+      Selke, RT #77761)
+
 0.29  2012-11-07
     - Fixed cross-platform filename problem in run_from_file (thanks Clifford
       Sobchuk, RT #77761)
